Added headshot image to cover page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <!-- Full Page Hero / Cover Section -->
     <section class="hero-cover">
       <div class="hero-content">
+        <img src="images/headshot.JPG" alt="Headshot of Kenny Vo" class="hero-headshot" width="220" height="220" />
+
         <h1>Kenny Vo</h1>
+
         <p class="hero-tagline">
           Computer Science student learning <strong>web development</strong>,
           building projects, and staying consistent.
