Changed quick links into buttons

--- a/index.html
+++ b/index.html
@@ -72,11 +72,20 @@
 
         <aside class="aside-box">
           <h3>Quick Links</h3>
-          <p>
-            <a href="https://github.com/" target="_blank" rel="noopener noreferrer">GitHub</a>,
-            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a>,
-            <a href="https://developer.mozilla.org/" target="_blank" rel="noopener noreferrer">MDN Web Docs</a>
-          </p>
+
+          <div class="quick-links">
+            <a class="btn-link" href="https://github.com/" target="_blank" rel="noopener noreferrer">
+              GitHub
+            </a>
+
+            <a class="btn-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+              LinkedIn
+            </a>
+
+            <a class="btn-link" href="https://developer.mozilla.org/" target="_blank" rel="noopener noreferrer">
+              MDN Web Docs
+            </a>
+          </div>
         </aside>
       </section>
 
