Replaced the university card with an JPG image of GSU

--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@
 
       <div class="img-grid two-up">
         <figure class="img-card">
-          <img src="images/about-campus.svg"
-            alt="Illustration of a campus building and a notebook representing college life" width="480" height="320" />
-          <figcaption>College life</figcaption>
+          <img src="images/gsu-campus.JPG" alt="Landscape photo of Georgia State University campus buildings and walkways"
+            class="landscape-img" width="900" height="600" />
+          <figcaption>Student @ Georgia State University</figcaption>
         </figure>
 
         <figure class="img-card">
