Replaced video section with audio player with my favorite study jams

--- a/index.html
+++ b/index.html
@@ -77,11 +77,9 @@
             <a class="btn-link" href="https://github.com/" target="_blank" rel="noopener noreferrer">
               GitHub
             </a>
-
             <a class="btn-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
               LinkedIn
             </a>
-
             <a class="btn-link" href="https://developer.mozilla.org/" target="_blank" rel="noopener noreferrer">
               MDN Web Docs
             </a>
@@ -91,18 +89,38 @@
 
       <hr />
 
-      <!-- Embedded Video -->
+      <!-- Favorite Songs -->
       <section class="card">
-        <h2>Learning Resource</h2>
+        <h2>Favorite Songs</h2>
         <p>
-          I often use short tutorials when learning new concepts.
-          This video is a quick HTML refresher that helped reinforce basics.
+          Music is something I usually listen to while studying or relaxing.
+          These are a few songs I keep on repeat.
         </p>
 
-        <div class="video-wrap">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/ok-plXXHlWw" title="HTML tutorial video"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+        <div class="audio-list">
+          <article class="audio-item">
+            <h3>ASTN</h3>
+            <audio controls>
+              <source src="audio/astn.mp3" type="audio/mpeg" />
+              Your browser does not support the audio element.
+            </audio>
+          </article>
+
+          <article class="audio-item">
+            <h3>Guidance</h3>
+            <audio controls>
+              <source src="audio/guidance.mp3" type="audio/mpeg" />
+              Your browser does not support the audio element.
+            </audio>
+          </article>
+
+          <article class="audio-item">
+            <h3>Kairo</h3>
+            <audio controls>
+              <source src="audio/kairo.mp3" type="audio/mpeg" />
+              Your browser does not support the audio element.
+            </audio>
+          </article>
         </div>
       </section>
     </div>
