enhanced cover with accent theme, glow behind the headshot, and scroll cue

--- a/index.html
+++ b/index.html
@@ -31,18 +31,24 @@
     <!-- Full Page Hero / Cover Section -->
     <section class="hero-cover">
       <div class="hero-content">
-        <img src="images/headshot.JPG" alt="Headshot of Kenny Vo" class="hero-headshot" width="220" height="220" />
+        <div class="headshot-wrap">
+          <img src="images/headshot.JPG" alt="Headshot of Kenny Vo" class="hero-headshot" width="220" height="220" />
+        </div>
 
         <h1>Kenny Vo</h1>
 
         <p class="hero-tagline">
-          Computer Science student learning <strong>web development</strong>,
-          building projects, and staying consistent.
+          Computer Science student studying <strong>AI Technology</strong> and their advancements.
         </p>
 
         <p class="hero-links">
           <a href="about.html">Learn more about me</a> |
           <a href="projects.html">View my projects</a>
+        </p>
+
+        <p class="scroll-cue" aria-hidden="true">
+          <span class="scroll-text">scroll</span>
+          <span class="scroll-arrow">↓</span>
         </p>
       </div>
     </section>
@@ -58,8 +64,7 @@
           It focuses on structure, semantics, and clean organization.
         </p>
         <p>
-          I like building small but real projects. Even simple pages help reinforce
-          good habits and attention to detail.
+          I enjoy working on small but meaningful projects because they give me the opportunity to practice and grow my knowledge.
         </p>
 
         <ul>
