Added 2 images displaying personal interest

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
           <h3>Quick Links</h3>
 
           <div class="quick-links">
-            <a class="btn-link" href="https://github.com/" target="_blank" rel="noopener noreferrer">
+            <a class="btn-link" href="https://github.com/kvo110" target="_blank" rel="noopener noreferrer">
               GitHub
             </a>
-            <a class="btn-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+            <a class="btn-link" href="https://www.linkedin.com/in/huy-vo-49616322b" target="_blank" rel="noopener noreferrer">
               LinkedIn
             </a>
             <a class="btn-link" href="https://developer.mozilla.org/" target="_blank" rel="noopener noreferrer">
@@ -90,6 +90,33 @@
             </a>
           </div>
         </aside>
+      </section>
+
+      <hr />
+
+      <!-- Personal Interests -->
+      <section class="card">
+        <h2>Personal Interests</h2>
+
+        <div class="img-grid two-up">
+          <figure class="img-card">
+            <img src="images/coding.JPG"
+              alt="Minimal office desk setup with tech in a clean workspace" width="480"
+              height="320" />
+            <figcaption>
+              Building minimalistic desk setups to produce optimal productivity.
+            </figcaption>
+          </figure>
+
+          <figure class="img-card">
+            <img src="images/music.JPG"
+              alt="Bart Simpson under a blanket while listening to an MP3" width="480"
+              height="320" />
+            <figcaption>
+              Listening to music while studying or taking breaks to stay focused.
+            </figcaption>
+          </figure>
+        </div>
       </section>
 
       <hr />
