Changed the page jump on About Me page to button style

--- a/about.html
+++ b/about.html
@@ -34,13 +34,14 @@
     <section class="card">
       <h1>About Me</h1>
 
-      <p class="jump-links">
-        Jump to:
-        <a href="#story">My Story</a> •
-        <a href="#skills">Skills</a> •
-        <a href="#goals">Goals</a> •
-        <a href="#table">Skills Table</a>
-      </p>
+      <nav class="jump-nav" aria-label="About page section navigation">
+        <ul class="jump-nav-list">
+          <li><a class="jump-nav-link" href="#story">My Story</a></li>
+          <li><a class="jump-nav-link" href="#skills">Skills</a></li>
+          <li><a class="jump-nav-link" href="#goals">Goals</a></li>
+          <li><a class="jump-nav-link" href="#table">Skills Table</a></li>
+        </ul>
+      </nav>
 
       <div class="img-grid two-up">
         <figure class="img-card">
