Replaced generic placeholders on about me card

--- a/about.html
+++ b/about.html
@@ -43,20 +43,22 @@
         </ul>
       </nav>
 
-      <div class="img-grid two-up">
-        <figure class="img-card">
-          <img src="images/gsu-campus.JPG" alt="Landscape photo of Georgia State University campus buildings and walkways"
-            class="landscape-img" width="900" height="600" />
-          <figcaption>Student @ Georgia State University</figcaption>
-        </figure>
+      <figure class="img-card">
+        <img src="images/gsu-campus.JPG" alt="Georgia State University campus walkway with buildings and students"
+          width="480" height="320" />
+        <figcaption>
+          Studying computer science at Georgia State University.
+        </figcaption>
+      </figure>
 
-        <figure class="img-card">
-          <img src="images/about-notes.svg" alt="Illustration of study notes, a pencil, and a checklist for planning"
-            width="480" height="320" />
-          <figcaption>Staying organized</figcaption>
-        </figure>
-      </div>
-    </section>
+      <figure class="img-card">
+        <img src="images/ai-focus.JPG"
+          alt="Laptop on a desk displaying code and study materials, representing current learning and focus" width="480"
+          height="320" />
+        <figcaption>
+          Currently focusing on computer science fundamentals and AI-related concepts.
+        </figcaption>
+      </figure>
 
     <hr />
 
