Didnt fully save file on previous commit

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 
       <figure class="img-card">
         <img src="images/ai-focus.JPG"
-          alt="Laptop on a desk displaying code and study materials, representing current learning and focus" width="480"
+          alt="AI chip, representing current learning and focus" width="480"
           height="320" />
         <figcaption>
           Currently focusing on computer science fundamentals and AI-related concepts.
