Made changes to the text in About Me page

--- a/about.html
+++ b/about.html
@@ -67,31 +67,32 @@
       <h2>My Story</h2>
 
       <p>
-        I’m a Computer Science student at Georgia State University. I’m interested in building apps that
-        actually help people, even if the first version is small.
+        I am currently completing my senior year at Georgia State University, pursuing a Bachelor’s degree in Computer
+        Science.
+        My interest in programming comes from wanting to build things that actually work in real situations, not just for
+        assignments.
+        I actively look for opportunities to apply what I learn through personal projects and hands-on practice.
       </p>
 
       <p>
-        I like clean structure and good habits. One thing I’m learning is that it’s better to ship something simple
-        and improve it, instead of trying to make it perfect on day one.
+        I value clean structure and good habits when it comes to coding. One lesson I’ve learned over time is that it’s better
+        to build something simple, test it, and improve it step by step rather than waiting for everything to be perfect from
+        the start.
+        This approach has helped me stay consistent and make steady progress.
       </p>
 
       <p>
-        Outside of school, I enjoy fitness and keeping a steady routine. It sounds basic, but staying consistent makes
-        everything easier — classes, projects, and personal goals.
+        Outside of academics, I enjoy fitness and maintaining a structured routine. Staying consistent in my daily habits
+        has made a big difference in how I manage coursework, projects, and long-term goals. I’ve found that discipline
+        outside
+        of coding translates directly into better focus and productivity when working on technical problems.
       </p>
 
       <p>
-        My main focus right now is strengthening my fundamentals: HTML, CSS basics, programming structure,
-        and writing code that doesn’t turn into a mess later.
+        Right now, my main focus is strengthening my fundamentals, including HTML, CSS, programming structure, and writing
+        readable, maintainable code. I’m especially interested in developing skills that scale well over time and prepare me
+        for real-world software development environments.
       </p>
-
-      <aside class="aside-box">
-        <h3>Fun Facts</h3>
-        <p>
-          I’m the type of person who likes checklists.<br />
-          If I don’t write it down, I might forget it.
-        </p>
       </aside>
     </section>
 
@@ -102,22 +103,19 @@
       <h2>Skills & Interests</h2>
 
       <p>
-        Here are some areas I’ve worked with and enjoy learning more about:
+        Below are some of the technical areas I have experience with and actively continue to develop through coursework and
+        personal projects:
       </p>
 
       <ul>
-        <li>HTML and semantic structure</li>
-        <li>CSS basics (layout, spacing, readability)</li>
-        <li>Java programming (projects and coursework)</li>
-        <li>SQL / database fundamentals</li>
-        <li>Building small apps to practice concepts</li>
+        <li><strong>HTML:</strong> Writing clean, semantic markup with accessibility and structure in mind</li>
+        <li><strong>CSS:</strong> Layout, spacing, and readability with a focus on maintainable styles</li>
+        <li><strong>Java:</strong> Object-oriented programming through coursework and hands-on projects</li>
+        <li><strong>SQL:</strong> Database fundamentals, including queries and basic data modeling</li>
+        <li><strong>Project Building:</strong> Creating small applications to practice concepts and reinforce fundamentals
+        </li>
       </ul>
 
-      <p>
-        Helpful links I actually use:
-        <a href="https://developer.mozilla.org/" target="_blank" rel="noopener noreferrer">MDN</a>,
-        <a href="https://www.w3schools.com/" target="_blank" rel="noopener noreferrer">W3Schools</a>
-      </p>
     </section>
 
     <hr />
@@ -127,19 +125,26 @@
       <h2>Top Goals for 2026</h2>
 
       <p>
-        These are my “keep it simple and real” goals. Nothing fancy, just steady progress.
+        These goals reflect my approach to learning and improvement. I focus on steady progress, practical experience, and
+        building skills that carry over into real-world development.
       </p>
 
       <ol>
-        <li>Finish more small projects (even if they’re not perfect)</li>
-        <li>Get comfortable with HTML/CSS without constantly looking everything up</li>
-        <li>Improve code organization so future features don’t break everything</li>
-        <li>Practice interviewing basics and explaining projects clearly</li>
-        <li>Build a portfolio that shows consistent improvement over time</li>
+        <li>Complete more small, focused projects and iterate on them over time</li>
+        <li>Become more comfortable with HTML and CSS fundamentals through repetition and practice</li>
+        <li>Improve code organization so projects remain readable and easy to extend</li>
+        <li>Strengthen my ability to explain projects clearly during interviews and discussions</li>
+        <li>Build a portfolio that demonstrates consistent growth and improvement</li>
       </ol>
+    </section>
 
-      <blockquote>
-        “Discipline beats motivation when motivation disappears.”
+    <hr />
+
+    <section class="card quote-card">
+      <blockquote class="quote-text">
+        "A man must be big enough to admit his mistakes,<br />
+        smart enough to profit from them, and strong enough to correct them."<br />
+        - John C. Maxwell
       </blockquote>
     </section>
 
