Styling of project page, added AI Generated images for each project, and added a git hub link to the repo of each project

--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects - Kenny's Simple Portfolio</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css?v=7" />
 </head>
 
 <body>
@@ -45,16 +45,25 @@
     <section class="card">
       <article>
         <h2>PropertyPulse</h2>
-        <img src="images/project-propertypulse.svg"
-          alt="Illustration of a house icon with a chart line representing a real estate app concept" width="900"
+
+        <img src="images/property_pulse.png"
+          alt="PropertyPulse app screenshot showing property listings and a property details view" width="900"
           height="320" />
+
         <p>
-          PropertyPulse is a real-estate style app idea where users can track properties and see basic insights.
-          It’s the kind of project that mixes UI, data, and real-world usefulness.
+          PropertyPulse is a real-estate style app where users can browse properties and view basic details.
+          I built it to practice creating clean UI screens and organizing project structure like a real app.
         </p>
+
         <p>
-          External inspiration:
+          External Reference:
           <a href="https://flutter.dev/" target="_blank" rel="noopener noreferrer">Flutter</a>
+        </p>
+
+        <p>
+          <a class="btn-link" href="https://github.com/kvo110/property_pulse" target="_blank" rel="noopener noreferrer">
+            View on GitHub
+          </a>
         </p>
       </article>
     </section>
@@ -63,16 +72,26 @@
     <section class="card">
       <article>
         <h2>Employee Management System</h2>
-        <img src="images/project-ems.svg"
-          alt="Illustration of a database cylinder and a small employee badge representing a management system"
+
+        <img src="images/ems.png"
+          alt="Employee Management System graphic showing employee records, roles, and database organization"
           width="900" height="320" />
+
         <p>
-          This project is about organizing real application features: employees, roles, and data operations.
-          It’s good practice for clean structure and thinking like a developer instead of just writing random code.
+          This project focuses on organizing real application features like employee records, roles, and data
+          operations.
+          It helped me practice cleaner structure, data thinking, and building features in a way that can scale.
         </p>
+
         <p>
           Useful reference:
           <a href="https://docs.oracle.com/en/java/" target="_blank" rel="noopener noreferrer">Java Documentation</a>
+        </p>
+
+        <p>
+          <a class="btn-link" href="https://github.com/kvo110/EMS" target="_blank" rel="noopener noreferrer">
+            View on GitHub
+          </a>
         </p>
       </article>
     </section>
@@ -80,17 +99,28 @@
     <!-- Project 3 -->
     <section class="card">
       <article>
-        <h2>GBA Pong</h2>
-        <img src="images/project-pong.svg"
-          alt="Illustration of a small retro screen with a ball and paddle representing a Pong game" width="900"
-          height="320" />
+        <h2>Fitness Tracker</h2>
+
+        <img src="images/fitness_tracker.png"
+          alt="Fitness Tracker app illustration showing workout tracking, progress charts, and daily fitness stats"
+          width="900" height="320" />
+
         <p>
-          A simple Pong game where the paddle tracks the ball and the score increases when you make contact.
-          I like it because it’s small, visual, and forces you to think carefully about input and movement.
+          Fitness Tracker is an app project built around logging workouts and tracking progress over time.
+          I like this one because it mixes real-life usefulness with learning how to structure screens, data, and user
+          flow.
         </p>
+
         <p>
           Helpful learning resource:
-          <a href="https://en.wikipedia.org/wiki/Pong" target="_blank" rel="noopener noreferrer">Pong (Wikipedia)</a>
+          <a href="https://developer.android.com/" target="_blank" rel="noopener noreferrer">Android Developers</a>
+        </p>
+
+        <p>
+          <a class="btn-link" href="https://github.com/kvo110/fitness_tracker" target="_blank"
+            rel="noopener noreferrer">
+            View on GitHub
+          </a>
         </p>
       </article>
     </section>
@@ -106,8 +136,8 @@
       </p>
       <p>
         Social links:
-        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">GitHub</a> and
-        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a href="https://github.com/kvo110" target="_blank" rel="noopener noreferrer">GitHub</a> and
+        <a href="https://www.linkedin.com/in/huy-vo-49616322b" target="_blank" rel="noopener noreferrer">LinkedIn</a>
       </p>
     </section>
   </main>
