Changed the connect with me from links into buttons

--- a/projects.html
+++ b/projects.html
@@ -127,29 +127,33 @@
 
     <hr />
 
-    <!-- Connect -->
     <section class="card">
       <h2>Connect With Me</h2>
-      <p>
-        Email:
-        <a href="mailto:voghuy17@gmail.com">voghuy17@gmail.com</a>
-      </p>
-      <p>
-        Social links:
-        <a href="https://github.com/kvo110" target="_blank" rel="noopener noreferrer">GitHub</a> and
-        <a href="https://www.linkedin.com/in/huy-vo-49616322b" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-      </p>
+
+      <div class="connect-buttons">
+        <a class="connect-btn" href="https://github.com/kvo110" target="_blank" rel="noopener noreferrer">
+          GitHub
+        </a>
+
+        <a class="connect-btn" href="https://www.linkedin.com/in/huy-vo-49616322b" target="_blank"
+          rel="noopener noreferrer">
+          LinkedIn
+        </a>
+
+        <a class="connect-btn" href="mailto:voghuy17@gmail.com">
+          Email Me
+        </a>
+      </div>
     </section>
-  </main>
 
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>
-        © 2026 Kenny Vo • Built for CW02
-      </p>
-    </div>
-  </footer>
-</body>
+    <!-- Footer -->
+    <footer class="site-footer">
+      <div class="container">
+        <p>
+          © 2026 Kenny Vo • Built for Web Programming CSC 4370
+        </p>
+      </div>
+    </footer>
+  </body>
 
-</html>
+  </html>
